# goodreads_miner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cliff.toml  list.txt  main.py  pyproject.toml  save_csv.py  scraper.py  tasks.py
data/: list.csv
goodread_miner/: __init__.py  main.py  save_csv.py  scraper.py
goodreads_miner/: __init__.py  main.py
tests/: test_main.py  test_save_csv.py  test_scraper.py  test_scraper_edge.py
